--- a/src/ch02/index.html
+++ b/src/ch02/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>React AISoftware</title>
+    <title>김재홍의 블로그</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>인공지능소프트웨어과에 오신 것을 환영합니다.</h1>
+    <h1>김재홍의 블로그에 오신 여러분을 환영합니다.</h1>
+    <!--DOM 컨테이너(root DOM node 만들기-->
     <div id="root"></div>
+    <!--자바 스크립트 파일 가져오기 -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="MyButton.js"></script>
+
+    <!--리액트 컴포넌트 가져오기 -->
+    <script src="./MyButton.js"></script>
+
 </body>
 </html>
